nginx/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
      annotations:
        kubernetes.io/change-cause: "1st release"
    spec:
      containers:
      - name: nginx
        image: gcr.io/iosdc-2018-cfp-staging/nginx:0.1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      dnsPolicy: ClusterFirst
      restartPolicy: Always
